Fase 1 de completacion de las 4 pantallas Alex Ferrín

--- a/contactenos/contactenos.html
+++ b/contactenos/contactenos.html
@@ -28,7 +28,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav nav-pills nav-justified">
                 <li><a href="../index.html">Principal</a></li>
-                <li><a href="#productos">Productos</a></li>
+                <li><a href="../productos/productos.html">Productos</a></li>
                 <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
 				<li><a href="#evolucion">Evolución del Juego</a></li>
 				<li><a href="#comojugar">Cómo se Juega</a></li>
@@ -94,9 +94,9 @@
 	</div>
 	
 	<div class="container content-box follow">
-		<p>Síguenos en: <img src="../img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32px" width="32px"> 
-		<img src="../img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32px" width="32px">
-		<img src="../img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32px" width="32px">
+		<p>Síguenos en: <img src="../img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
+		<img src="../img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
+		<img src="../img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
 		</p>
 	</div>
 	
