--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav nav-pills nav-justified">
                 <li class="active"><a href="#">Principal</a></li>
-                <li><a href="#productos">Productos</a></li>
+                <li><a href="productos/productos.html">Productos</a></li>
                 <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
 				<li><a href="#evolucion">Evolución del Juego</a></li>
 				<li><a href="#comojugar">Cómo se Juega</a></li>
@@ -52,9 +52,9 @@
 						<img src="img/COTD-BoosterEN.png" alt="COTD" class="product-image">
 					</div>
 					<div class="col-md-9 col-xs-9">
-						<p class="product-title">Código de Duelista - Paquete de cartas.</p>
+						<p class="product-title">Código de Duelista - Sobre de Expansión.</p>
 						<br>
-						<p class="product-description"> Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder </p>
+						<p class="product-description"> Combina monstruos Fusión, Ritual, de Sincronía, Xyz, Péndulo y los nuevos Links para dar inicio a una nueva era de Yu-Gi-Oh!</p>
 					</div>
 				</div>
 			</div>
@@ -64,9 +64,9 @@
 						<img src="img/PEVO-BoosterEN.png" alt="PEVO" class="product-image">
 					</div>
 					<div class="col-md-9 col-xs-9">
-						<p class="product-title">Evolución del Péndulo - Paquete de cartas.</p>
+						<p class="product-title">Evolución del Péndulo - Sobre de Expansión.</p>
 						<br>
-						<p class="product-description"> Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder </p>
+						<p class="product-description"> Conjunto de cartas todas brillantes desde rareza Súper hasta rareza Ultra, caracterizando nuevos monstruos Péndulo.</p>
 					</div>
 				</div>
 			</div>
@@ -76,9 +76,9 @@
 						<img src="img/MACR-BoosterEN.png" alt="MACR" class="product-image">
 					</div>
 					<div class="col-md-9 col-xs-9">
-						<p class="product-title">Crisis Máxima - Paquete de cartas.</p>
+						<p class="product-title">Crisis Máxima - Sobre de Expansión.</p>
 						<br>
-						<p class="product-description"> Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder </p>
+						<p class="product-description"> Las paredes entre dimensiones están colapsando, y el rey supremo de la destrucción se levantará.</p>
 					</div>
 				</div>
 			</div>
@@ -88,9 +88,9 @@
 						<img src="img/RATE-BoosterEN.png" alt="RATE" class="product-image">
 					</div>
 					<div class="col-md-9 col-xs-9">
-						<p class="product-title">Tempestad Furiosa - Paquete de cartas.</p>
+						<p class="product-title">Tempestad Furiosa - Sobre de Expansión.</p>
 						<br>
-						<p class="product-description"> Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder </p>
+						<p class="product-description"> Tempestad Furiosa empieza tres nuevos temas y da más poder a temas ya empezado anteriormente por otros sobres.</p>
 					</div>
 				</div>
 			</div>
@@ -143,9 +143,9 @@
       </div>
 	</div>
 	<div class="container content-box follow">
-		<p>Síguenos en: <img src="img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32px" width="32px"> 
-		<img src="img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32px" width="32px">
-		<img src="img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32px" width="32px">
+		<p>Síguenos en: <img src="img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
+		<img src="img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
+		<img src="img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
 		</p>
 	</div>
 	
