Imagenes en galeria ya estan adaptadas a resolucion de pantalla, html validados por el validador de w3c

--- a/contactenos/contactenos.html
+++ b/contactenos/contactenos.html
@@ -82,7 +82,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="descripcion">Descripción:</label>
       <div class="col-sm-8">          
-        <textarea class="form-control" rows="5" id="descripción" maxlength="400"></textarea>
+        <textarea class="form-control" rows="5" id="descripcion" maxlength="400"></textarea>
       </div>
     </div>
     <div class="form-group">        
