--- a/galeriaCartas/galeriaCartas.html
+++ b/galeriaCartas/galeriaCartas.html
@@ -225,7 +225,7 @@
 	</div>
 	
 	<div class="container content-box" id="imagenGrande">
-		<img src="" alt="" class="big-image img-responsive" id="bigImagen">
+		<img src="./img/nada.png" alt="" class="big-image img-responsive" id="bigImagen">
 	</div>
 	
 	<div class="container content-box follow">
