--- a/index.html
+++ b/index.html
@@ -97,14 +97,13 @@
 			</div>
 		</div>
         <div class="col-md-6 col-xs-11">
-			<div class="contenedor content-box">
-				<div class="titulo">
-					<p>Cómo jugar</p>
-				</div>
+			<div class="contenedor">
+
 				<div>
 					<img src="img/pensummon.gif" alt="PendulumGif" class="gif">
+					<p class="ygo">Aprende la mecánica de los monstruos péndulo.</p>
 					<img src="img/howtolink.jpg" alt="PendulumGif" class="gif">
-					<p class="product-description"> *Estas imágenes son placeholders y se cambiarán cuando hayan mejores imágenes.
+					<p class="ygo">Se vienen los monstruos link. Prepárate conociendo cómo se jugarán.</p>
 				</div>
 			</div>
 			<div class="content-box">
