modificando el background agregando la pagina de como jugar añadiendo el nuevo fondo de imagen

--- a/comoSeJuega/comoSeJuega.html
+++ b/comoSeJuega/comoSeJuega.html
@@ -8,9 +8,44 @@
 		<meta name="descripción" content="Página para ver como jugar Yu-Gi-Oh!"/>
 		<meta name="autores" content="Alex Ferrín, Julio Larrea"/>
 		<link href="../css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/estilo.css" rel="stylesheet">
+		<link href="../css/estilo.css" rel="stylesheet">
 	</head>
 	<body>
-	
+	<div class="navbar-wrapper">
+      <div class="container" id="nav-container">
+
+        <nav class="navbar navbar-inverse">
+			<div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+			  <p class="navbar-brand hideOnNormal">Barra Navegación</p>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav nav-pills nav-justified">
+                <li ><a href="../index.html">Principal</a></li>
+                <li><a href="../productos/productos.html">Productos</a></li>
+                <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
+				<li><a href="#evolucion">Evolución del Juego</a></li>
+				<li class="active"><a href="#comojugar">Cómo se Juega</a></li>
+				<li><a href="#estadisticas">Estadísticas</a></li>
+				<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
+              </ul>
+            </div>
+        </nav>
+      </div>
+    </div>
+
+    <h1 style="color:white" align="center">Como jugar Yu-Gi-Oh</h1>
+	!--<hr />
+	<iframe class="principiante" width="650" height="400" src="https://www.youtube.com/embed/HqOOQMuQhDY?ecver=1" allowfullscreen></iframe>
+	<hr />
+	<h2  align="center"><a href="comojugar2.html" style="color:white" >Cómo realizar invocacion pendulo</a></h2>
+
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
