--- a/comoSeJuega/comoSeJuega.html
+++ b/comoSeJuega/comoSeJuega.html
@@ -8,8 +8,8 @@
 		<meta name="descripción" content="Página para ver como jugar Yu-Gi-Oh!"/>
 		<meta name="autores" content="Alex Ferrín, Julio Larrea"/>
 		<link href="../css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/estilo.css" rel="stylesheet">
 		<link href="../css/estilo.css" rel="stylesheet">
+		<link href="css/estilo.css" rel="stylesheet">
 	</head>
 	<body>
 	<div class="navbar-wrapper">
@@ -39,13 +39,15 @@
         </nav>
       </div>
     </div>
-
-    <h1 style="color:white" align="center">Como jugar Yu-Gi-Oh</h1>
+	<div class="container">
+    <h1>Como jugar Yu-Gi-Oh!</h1>
 	!--<hr />
-	<iframe class="principiante" width="650" height="400" src="https://www.youtube.com/embed/HqOOQMuQhDY?ecver=1" allowfullscreen></iframe>
+	<div class="resized-container center-block">
+	<iframe class="principiante" src="https://www.youtube.com/embed/HqOOQMuQhDY?ecver=1" allowfullscreen></iframe>
+	</div>
 	<hr />
-	<h2  align="center"><a href="comojugar2.html" style="color:white" >Cómo realizar invocacion pendulo</a></h2>
-
+	<h2><a href="comojugar2.html" >Cómo realizar invocacion pendulo</a></h2>
+	</div>
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
