Cambios en ciertas funcionalidades

--- a/productos/productos.html
+++ b/productos/productos.html
@@ -31,7 +31,7 @@
                 <li class="active"><a href="#productos">Productos</a></li>
                 <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
 				<li><a href="#evolucion">Evolución del Juego</a></li>
-				<li><a href="#comojugar">Cómo se Juega</a></li>
+				<li><a href="../comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
 				<li><a href="#estadisticas">Estadísticas</a></li>
 				<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
               </ul>
