--- a/contactenos/contactenos.html
+++ b/contactenos/contactenos.html
@@ -31,7 +31,7 @@
                 <li><a href="../productos/productos.html">Productos</a></li>
                 <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
 				<li><a href="#evolucion">Evolución del Juego</a></li>
-				<li><a href="#comojugar">Cómo se Juega</a></li>
+				<li><a href="../comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
 				<li><a href="#estadisticas">Estadísticas</a></li>
 				<li class="active"><a href="#contactenos">Contáctenos</a></li>
               </ul>
