completando la pagina de como jugar

--- a/comoSeJuega/comoSeJuega.html
+++ b/comoSeJuega/comoSeJuega.html
@@ -40,15 +40,23 @@
       </div>
     </div>
 	<div class="container">
-    <h1>Como jugar Yu-Gi-Oh!</h1>
-	!--<hr />
-	<div class="resized-container center-block">
-	<iframe class="principiante" src="https://www.youtube.com/embed/HqOOQMuQhDY?ecver=1" allowfullscreen></iframe>
+	    <h1>Como jugar Yu-Gi-Oh!</h1>
+		<hr />
+		<div class="resized-container center-block">
+			<iframe class="principiante" src="https://www.youtube.com/embed/HqOOQMuQhDY?ecver=1" allowfullscreen></iframe>
+		</div>
+		<hr />
+		<h2><a href="comojugar2.html" >Cómo realizar invocacion pendulo</a></h2>
+		<div class="resized-container center-block">
+			<iframe class="principiante" src="https://www.youtube.com/embed/16A_wwdxAcA?ecver=1" allowfullscreen></iframe>
+		</div></br>
 	</div>
-	<hr />
-	<h2><a href="comojugar2.html" >Cómo realizar invocacion pendulo</a></h2>
+	<div class="container content-box follow">
+		<p>Síguenos en: <img src="../img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
+		<img src="../img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
+		<img src="../img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
+		</p>
 	</div>
-	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
