Agregando preambulo de estadisticas, modificando otras paginas para sus enlaces

--- a/comoSeJuega/comoSeJuega.html
+++ b/comoSeJuega/comoSeJuega.html
@@ -12,54 +12,54 @@
 		<link href="css/estilo.css" rel="stylesheet">
 	</head>
 	<body>
-	<div class="navbar-wrapper">
-      <div class="container" id="nav-container">
+		<div class="navbar-wrapper">
+	      <div class="container" id="nav-container">
 
-        <nav class="navbar navbar-inverse">
-			<div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-			  <p class="navbar-brand hideOnNormal">Barra Navegación</p>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav nav-pills nav-justified">
-                <li ><a href="../index.html">Principal</a></li>
-                <li><a href="../productos/productos.html">Productos</a></li>
-                <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
-				<li><a href="#evolucion">Evolución del Juego</a></li>
-				<li class="active"><a href="#comojugar">Cómo se Juega</a></li>
-				<li><a href="#estadisticas">Estadísticas</a></li>
-				<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
-              </ul>
-            </div>
-        </nav>
-      </div>
-    </div>
-	<div class="container">
-	    <h1>Como jugar Yu-Gi-Oh!</h1>
-		<hr />
-		<div class="resized-container center-block">
-			<iframe class="principiante" src="https://www.youtube.com/embed/HqOOQMuQhDY?ecver=1" allowfullscreen></iframe>
+	        <nav class="navbar navbar-inverse">
+				<div class="navbar-header">
+	              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	                <span class="sr-only">Toggle navigation</span>
+	                <span class="icon-bar"></span>
+	                <span class="icon-bar"></span>
+	                <span class="icon-bar"></span>
+	              </button>
+				  <p class="navbar-brand hideOnNormal">Barra Navegación</p>
+	            </div>
+	            <div id="navbar" class="navbar-collapse collapse">
+	              <ul class="nav nav-pills nav-justified">
+	                <li ><a href="../index.html">Principal</a></li>
+	                <li><a href="../productos/productos.html">Productos</a></li>
+	                <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
+					<li><a href="#evolucion">Evolución del Juego</a></li>
+					<li class="active"><a href="#comojugar">Cómo se Juega</a></li>
+					<li><a href="estadisticas/estadisticas.html">Estadísticas</a></li>
+					<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
+	              </ul>
+	            </div>
+	        </nav>
+	      </div>
+	    </div>
+		<div class="container">
+		    <h1>Como jugar Yu-Gi-Oh!</h1>
+			<hr />
+			<div class="resized-container center-block">
+				<iframe class="principiante" src="https://www.youtube.com/embed/HqOOQMuQhDY?ecver=1" allowfullscreen></iframe>
+			</div>
+			<hr />
+			<h2><a href="comojugar2.html" >Cómo realizar invocacion pendulo</a></h2>
+			<div class="resized-container center-block">
+				<iframe class="principiante" src="https://www.youtube.com/embed/16A_wwdxAcA?ecver=1" allowfullscreen></iframe>
+			</div></br>
 		</div>
-		<hr />
-		<h2><a href="comojugar2.html" >Cómo realizar invocacion pendulo</a></h2>
-		<div class="resized-container center-block">
-			<iframe class="principiante" src="https://www.youtube.com/embed/16A_wwdxAcA?ecver=1" allowfullscreen></iframe>
-		</div></br>
-	</div>
-	<div class="container content-box follow">
-		<p>Síguenos en: <img src="../img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
-		<img src="../img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
-		<img src="../img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
-		</p>
-	</div>
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../js/bootstrap.min.js"></script>
+		<div class="container content-box follow">
+			<p>Síguenos en: <img src="../img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
+			<img src="../img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
+			<img src="../img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
+			</p>
+		</div>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	    <!-- Include all compiled plugins (below), or include individual files as needed -->
+	    <script src="../js/bootstrap.min.js"></script>
 	</body>
 </html>
