--- a/productos/productos.html
+++ b/productos/productos.html
@@ -32,7 +32,7 @@
                 <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
 				<li><a href="#evolucion">Evolución del Juego</a></li>
 				<li><a href="../comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
-				<li><a href="#estadisticas">Estadísticas</a></li>
+				<li><a href="estadisticas/estadisticas.html">Estadísticas</a></li>
 				<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
               </ul>
             </div>
