--- a/estadisticas/estadisticas.html
+++ b/estadisticas/estadisticas.html
@@ -8,13 +8,101 @@
 		<meta name="descripción" content="Página de estadísticas de Yu-Gi-Oh! Guayaquil"/>
 		<meta name="autores" content="Alex Ferrín, Julio Larrea"/>
 		<link href="../css/bootstrap.min.css" rel="stylesheet">
+		<link href="../css/estilo.css" rel="stylesheet">
+		<link href="css/estilo.css" rel="stylesheet">
 	</head>
 	<body>
-	
-	
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../js/bootstrap.min.js"></script>
+		<div class="navbar-wrapper">
+	      <div class="container" id="nav-container">
+
+	        <nav class="navbar navbar-inverse">
+				<div class="navbar-header">
+	              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	                <span class="sr-only">Toggle navigation</span>
+	                <span class="icon-bar"></span>
+	                <span class="icon-bar"></span>
+	                <span class="icon-bar"></span>
+	              </button>
+				  <p class="navbar-brand hideOnNormal">Barra Navegación</p>
+	            </div>
+	            <div id="navbar" class="navbar-collapse collapse">
+	              <ul class="nav nav-pills nav-justified">
+	                <li ><a href="../index.html">Principal</a></li>
+	                <li><a href="../productos/productos.html">Productos</a></li>
+	                <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
+					<li><a href="#evolucion">Evolución del Juego</a></li>
+					<li class="active"><a href="#comojugar">Cómo se Juega</a></li>
+					<li><a href="#estadisticas">Estadísticas</a></li>
+					<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
+	              </ul>
+	            </div>
+	        </nav>
+	      </div>
+	    </div>
+		<div class="container" id="content-container">
+		<div class="row">
+        <div class="col-md-6 content-box col-xs-11">
+			<div class="titulo">
+				<p>Decks</p>
+			</div>
+			<div class="lista-productos">
+			<div class="product-listing" id="producto1">
+				<div class="row">
+					<div class="col-md-3 col-xs-3">
+						<img src="img/truedraco.jpg" alt="COTD" class="product-image">
+					</div>
+					<div class="col-md-9 col-xs-9">
+						<p class="product-title">True Draco</p>
+						<br>
+					</div>
+				</div>
+			</div>
+			<div class="product-listing" id="producto2">
+				<div class="row">
+					<div class="col-md-3 col-xs-3">
+						<img src="img/zoodiac.jpg" alt="PEVO" class="product-image">
+					</div>
+					<div class="col-md-9 col-xs-9">
+						<p class="product-title">Mono Zoodiac.</p>
+						<br>
+					</div>
+				</div>
+			</div>
+			<div class="product-listing" id="producto3">
+				<div class="row">
+					<div class="col-md-3 col-xs-3">
+						<img src="img/dinosaur.jpg" alt="MACR" class="product-image">
+					</div>
+					<div class="col-md-9 col-xs-9">
+						<p class="product-title">True King Dinosaur</p>
+						<br>
+					</div>
+				</div>
+			</div>
+			<div class="product-listing" id="producto4">
+				<div class="row">
+					<div class="col-md-3 col-xs-3">
+						<img src="img/yang.jpg" alt="RATE" class="product-image">
+					</div>
+					<div class="col-md-9 col-xs-9">
+						<p class="product-title">Yang Zing</p>
+						<br>
+					</div>
+				</div>
+			</div>
+			</div>
+		</div>
+		<div class="col-md-6 col-xs-11">
+			<div class="contenedor">
+
+				<div>
+					<img src="img/ocg.jpg" alt="PendulumGif" class="gif">
+					<p class="ygo">Reporte de los Decks mas utilizados en torneos.</p>
+				</div>
+			</div>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	    <!-- Include all compiled plugins (below), or include individual files as needed -->
+	    <script src="../js/bootstrap.min.js"></script>
 	</body>
 </html>
