--- a/index.html
+++ b/index.html
@@ -96,14 +96,23 @@
 			</div>
 			</div>
 		</div>
-        <div class="col-md-6 col-xs-11">
+        <div class="col-md-6 content-box col-xs-11">
 			<div class="contenedor">
 
-				<div>
-					<img src="img/pensummon.gif" alt="PendulumGif" class="gif">
-					<p class="ygo">Aprende la mecánica de los monstruos péndulo.</p>
-					<img src="img/howtolink.jpg" alt="PendulumGif" class="gif">
-					<p class="ygo">Se vienen los monstruos link. Prepárate conociendo cómo se jugarán.</p>
+				<div>>
+						<div class="row">
+							<div class="col-md-3 col-xs-3">
+
+							</div>
+							<div class="col-md-9 col-xs-9">
+								<p class="descripcion" >Yu-Gi-Oh! Juego de cartas collecionables</p>
+								<br>
+								<p class="descripcion-detalle" >Pagina dedicada para auxiliar nuevos duelistas en guayaquil a informarse mas sobre el juego YUGIOH, productos, tiendas y torneos</p>
+							</div>
+						</div>
+					</div>
+					<img src="img/vrains.gif" alt="vrainsGif" class="gif">
+					<p class="ygo">No te pierdas la nueva serie YUGIOH VRAINS!! disponible desde el 10/05/17 INTO THE VRAINS!</p>
 				</div>
 			</div>
 			<div class="content-box">
