--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<!-- Write your comments here -->
 		<title>Yu-Gi-Oh! Guayaquil</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
