agregando la pagina TorneosYTienda con geolocalización

--- a/comoSeJuega/comoSeJuega.html
+++ b/comoSeJuega/comoSeJuega.html
@@ -29,10 +29,10 @@
 	              <ul class="nav nav-pills nav-justified">
 	                <li ><a href="../index.html">Principal</a></li>
 	                <li><a href="../productos/productos.html">Productos</a></li>
-	                <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
+	                <li><a href="../torneosYtiendas/torneosYtiendas.html">Torneos y Tiendas</a></li>
 					<li><a href="#evolucion">Evolución del Juego</a></li>
 					<li class="active"><a href="#comojugar">Cómo se Juega</a></li>
-					<li><a href="estadisticas/estadisticas.html">Estadísticas</a></li>
+					<li><a href="../estadisticas/estadisticas.html">Estadísticas</a></li>
 					<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
 	              </ul>
 	            </div>
