--- a/estadisticas/estadisticas.html
+++ b/estadisticas/estadisticas.html
@@ -31,8 +31,8 @@
 	                <li><a href="../productos/productos.html">Productos</a></li>
 	                <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
 					<li><a href="#evolucion">Evolución del Juego</a></li>
-					<li class="active"><a href="#comojugar">Cómo se Juega</a></li>
-					<li><a href="#estadisticas">Estadísticas</a></li>
+					<li ><a href="#comojugar">Cómo se Juega</a></li>
+					<li class="active"><a href="#estadisticas">Estadísticas</a></li>
 					<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
 	              </ul>
 	            </div>
