--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <ul class="nav nav-pills nav-justified">
                 <li class="active"><a href="#">Principal</a></li>
                 <li><a href="productos/productos.html">Productos</a></li>
-                <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
+                <li><a href="torneosYtiendas/torneosYtiendas.html">Torneos y Tiendas</a></li>
 				<li><a href="#evolucion">Evolución del Juego</a></li>
 				<li><a href="comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
 				<li><a href="estadisticas/estadisticas.html">Estadísticas</a></li>
