--- a/torneosYtiendas/torneosYtiendas.html
+++ b/torneosYtiendas/torneosYtiendas.html
@@ -76,7 +76,7 @@
 							</div>
 						</div>
 					</div>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.004568241107!2d-79.8930346965209!3d-2.1519368023904137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6da0bcf7950d%3A0xab35996150caaea1!2sCalle+15+NE%2C+Guayaquil+090513!5e0!3m2!1ses-419!2sec!4v1499680856708" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.004568241107!2d-79.8930346965209!3d-2.1519368023904137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6da0bcf7950d%3A0xab35996150caaea1!2sCalle+15+NE%2C+Guayaquil+090513!5e0!3m2!1ses-419!2sec!4v1499680856708" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 					
 				</div>
 			</div>
