--- a/productos/productos.html
+++ b/productos/productos.html
@@ -29,10 +29,10 @@
               <ul class="nav nav-pills nav-justified">
                 <li><a href="../index.html">Principal</a></li>
                 <li class="active"><a href="#productos">Productos</a></li>
-                <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
-				<li><a href="#evolucion">Evolución del Juego</a></li>
+                <li><a href="../torneosYtiendas/torneosYtiendas.html">Torneos y Tiendas</a></li>
+				<li><a href="../timeline/timeline.html">Evolución del Juego</a></li>
 				<li><a href="../comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
-				<li><a href="estadisticas/estadisticas.html">Estadísticas</a></li>
+				<li><a href="../estadisticas/estadisticas.html">Estadísticas</a></li>
 				<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
               </ul>
             </div>
@@ -75,6 +75,7 @@
 		<img src="../img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
 		<img src="../img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
 		</p>
+		<p>*Los íconos no están habilitados.</p>
 	</div>
 	
 	
