--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="active"><a href="#">Principal</a></li>
                 <li><a href="productos/productos.html">Productos</a></li>
                 <li><a href="torneosYtiendas/torneosYtiendas.html">Torneos y Tiendas</a></li>
-				<li><a href="#evolucion">Evolución del Juego</a></li>
+				<li><a href="timeline/timeline.html">Evolución del Juego</a></li>
 				<li><a href="comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
 				<li><a href="estadisticas/estadisticas.html">Estadísticas</a></li>
 				<li><a href="contactenos/contactenos.html">Contáctenos</a></li>
@@ -152,10 +152,11 @@
       </div>
 	</div>
 	<div class="container content-box follow">
-		<p>Síguenos en: <img src="img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
-		<img src="img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
-		<img src="img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
+		<p>Síguenos en: <img src="../img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
+		<img src="../img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
+		<img src="../img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
 		</p>
+		<p>*Los íconos no están habilitados.</p>
 	</div>
 	
 	
