--- a/torneosYtiendas/torneosYtiendas.html
+++ b/torneosYtiendas/torneosYtiendas.html
@@ -30,7 +30,7 @@
 	                <li ><a href="../index.html">Principal</a></li>
 	                <li><a href="../productos/productos.html">Productos</a></li>
 	                <li class="active"><a href="#torneosytiendas">Torneos y Tiendas</a></li>
-					<li><a href="#evolucion">Evolución del Juego</a></li>
+					<li><a href="../timeline/timeline.html">Evolución del Juego</a></li>
 					<li ><a href="../comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
 					<li><a href="../estadisticas/estadisticas.html">Estadísticas</a></li>
 					<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
@@ -41,7 +41,7 @@
 	    </div>
 	    <div class="container" id="content-container">
 		<div class="row">
-        <div class="col-md-6 content-box col-xs-11" style="background-color: black">
+        <div class="col-md-6 content-box col-xs-12">
 			<div class="titulo">
 				<p>Locales en Guayaquil</p>
 			</div>
@@ -62,10 +62,10 @@
 			</div>
 			</div>
 		</div>
-		<div class="col-md-6 content-box col-xs-11"  style="margin-bottom: 100px; background-color: black">
+		<div class="col-md-6 content-box col-xs-12">
 			<div class="contenedor">
 
-				<div>>
+				<div>
 						<div class="row">
 							<div class="col-md-3 col-xs-3">
 
@@ -76,12 +76,12 @@
 							</div>
 						</div>
 					</div>
+					<div class="resized-container">
 					<iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.004568241107!2d-79.8930346965209!3d-2.1519368023904137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6da0bcf7950d%3A0xab35996150caaea1!2sCalle+15+NE%2C+Guayaquil+090513!5e0!3m2!1ses-419!2sec!4v1499680856708" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-					
+					</div>
 				</div>
 			</div>
 
-		<hr />
 
 		<div >
 				<div class="titulo">
@@ -118,6 +118,14 @@
 				</div>
 				
 			</div>
+			
+			<div class="container content-box follow">
+		<p>Síguenos en: <img src="../img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
+		<img src="../img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
+		<img src="../img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
+		</p>
+		<p>*Los íconos no están habilitados.</p>
+	</div>
 	
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
