--- a/estadisticas/estadisticas.html
+++ b/estadisticas/estadisticas.html
@@ -30,9 +30,9 @@
 	              <ul class="nav nav-pills nav-justified">
 	                <li ><a href="../index.html">Principal</a></li>
 	                <li><a href="../productos/productos.html">Productos</a></li>
-	                <li><a href="#torneosytiendas">Torneos y Tiendas</a></li>
-					<li><a href="#evolucion">Evolución del Juego</a></li>
-					<li ><a href="#comojugar">Cómo se Juega</a></li>
+	                <li><a href="../torneosYtiendas/torneosYtiendas.html">Torneos y Tiendas</a></li>
+					<li><a href="../timeline/timeline.html">Evolución del Juego</a></li>
+					<li><a href="../comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
 					<li class="active"><a href="#estadisticas">Estadísticas</a></li>
 					<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
 	              </ul>
@@ -55,7 +55,7 @@
 					<div class="col-md-9 col-xs-9">
 						<p class="product-title">True Draco</p>
 						<br>
-						<p class="product-description">60 jugadores</p>
+						<p>60 jugadores</p>
 					</div>
 				</div>
 			</div>
@@ -67,7 +67,7 @@
 					<div class="col-md-9 col-xs-9">
 						<p class="product-title">Mono Zoodiac.</p>
 						<br>
-						<p class="product-description">80 jugadores</p>
+						<p>80 jugadores</p>
 					</div>
 				</div>
 			</div>
@@ -79,7 +79,7 @@
 					<div class="col-md-9 col-xs-9">
 						<p class="product-title">True King Dinosaur</p>
 						<br>
-						<p class="product-description">50 jugadores</p>
+						<p>50 jugadores</p>
 					</div>
 				</div>
 			</div>
@@ -91,7 +91,7 @@
 					<div class="col-md-9 col-xs-9">
 						<p class="product-title">Yang Zing</p>
 						<br>
-						<p class="product-description">20 jugadores</p>
+						<p>20 jugadores</p>
 					</div>
 				</div>
 			</div>
@@ -103,13 +103,13 @@
 					<div class="col-md-9 col-xs-9">
 						<p class="product-title">Otros decks</p>
 						<br>
-						<p class="product-description">40 jugadores</p>
+						<p>40 jugadores</p>
 					</div>
 				</div>
 			</div>
 			</div>
 		</div>
-		<div class="col-md-6 col-xs-11">
+		<div class="col-md-6 col-xs-5 hideOnMobile">
 			<div class="contenedor">
 					<p class="ygo" style="margin-bottom: 80px;">Reporte de los Decks mas utilizados en torneos.</p>
 				<div class="estadistica">
@@ -117,6 +117,16 @@
 					
 				</div>
 			</div>
+			</div>
+			</div>
+			</div>
+			<div class="container content-box follow">
+		<p>Síguenos en: <img src="../img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
+		<img src="../img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
+		<img src="../img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
+		</p>
+		<p>*Los íconos no están habilitados.</p>
+	</div>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	    <script type="text/javascript" src="js/barras.js"></script>
