--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
       </div>
 	</div>
 	<div class="container content-box follow">
-		<p>Síguenos en: <img src="../img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
-		<img src="../img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
-		<img src="../img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
+		<p>Síguenos en: <img src="./img/facebook-icon-2-200x200.png" alt="facebookIcon" class="icon-inline" height="32" width="32"> 
+		<img src="./img/1484210852_twitter_letter.png" alt="twitterIcon" class="icon-inline" height="32" width="32">
+		<img src="./img/youtube2-128.png" alt="youtubeIcon" class="icon-inline" height="32" width="32">
 		</p>
 		<p>*Los íconos no están habilitados.</p>
 	</div>
