--- a/estadisticas/estadisticas.html
+++ b/estadisticas/estadisticas.html
@@ -10,7 +10,7 @@
 		<link href="../css/bootstrap.min.css" rel="stylesheet">
 		<link href="../css/estilo.css" rel="stylesheet">
 		<link href="css/estilo.css" rel="stylesheet">
-		<script src="http://d3js.org/d3.v3.min.js"></script>
+		<script src="https://d3js.org/d3.v3.min.js"></script>
 	</head>
 	<body>
 		<div class="navbar-wrapper">
