--- a/estadisticas/estadisticas.html
+++ b/estadisticas/estadisticas.html
@@ -10,6 +10,7 @@
 		<link href="../css/bootstrap.min.css" rel="stylesheet">
 		<link href="../css/estilo.css" rel="stylesheet">
 		<link href="css/estilo.css" rel="stylesheet">
+		<link href="../css/modificaciones_boostrap.css" rel="stylesheet">
 		<script src="https://d3js.org/d3.v3.min.js"></script>
 	</head>
 	<body>
@@ -33,8 +34,11 @@
 	                <li><a href="../torneosYtiendas/torneosYtiendas.html">Torneos y Tiendas</a></li>
 					<li><a href="../timeline/timeline.html">Evolución del Juego</a></li>
 					<li><a href="../comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
+					<li><a href="">Foros</a></li>
 					<li class="active"><a href="#estadisticas">Estadísticas</a></li>
 					<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
+					<li><a href="">Registrar</a></li>
+				<li><a href="">Iniciar sesion</a></li>
 	              </ul>
 	            </div>
 	        </nav>
