--- a/galeriaCartas/galeriaCartas1.html
+++ b/galeriaCartas/galeriaCartas1.html
@@ -10,6 +10,7 @@
 		<link href="../css/bootstrap.min.css" rel="stylesheet">
 		<link href="../css/estilo.css" rel="stylesheet">
 		<link href="./css/estilo.css" rel="stylesheet">
+		<link href="../css/modificaciones_boostrap.css" rel="stylesheet">
 	</head>
 	<body>
 	<div class="navbar-wrapper">
@@ -32,8 +33,11 @@
                 <li><a href="../torneosYtiendas/torneosYtiendas.html">Torneos y Tiendas</a></li>
 				<li><a href="../timeline/timeline.html">Evolución del Juego</a></li>
 				<li><a href="../comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
+				<li><a href="">Foros</a></li>
 				<li><a href="../estadisticas/estadisticas.html">Estadísticas</a></li>
 				<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
+				<li><a href="">Registrar</a></li>
+				<li><a href="">Iniciar sesion</a></li>
               </ul>
             </div>
         </nav>
