--- a/contactenos/contactenos.html
+++ b/contactenos/contactenos.html
@@ -13,6 +13,13 @@
 		<link href="../css/modificaciones_boostrap.css" rel="stylesheet">
 	</head>
 	<body>
+		<div class="btn-group">
+			<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mi cuenta<span class="caret"></span></button> 
+			<ul class="dropdown-menu"> 
+				<li><a href="#">Registrar</a></li>
+			    <li><a href="#">Iniciar Sesion</a></li> 
+			</ul> 
+		</div>
 	<div class="navbar-wrapper">
       <div class="container" id="nav-container">
 
@@ -29,15 +36,13 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav nav-pills nav-justified">
                 <li><a href="../index.html">Principal</a></li>
+                <li><a href="../foro/foro.html">Foros</a></li>
                 <li><a href="../productos/productos.html">Productos</a></li>
                 <li><a href="../torneosYtiendas/torneosYtiendas.html">Torneos y Tiendas</a></li>
 				<li><a href="../timeline/timeline.html">Evolución del Juego</a></li>
 				<li><a href="../comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
-				<li><a href="">Foros</a></li>
 				<li><a href="../estadisticas/estadisticas.html">Estadísticas</a></li>
 				<li class="active"><a href="#contactenos">Contáctenos</a></li>
-				<li><a href="">Registrar</a></li>
-				<li><a href="">Iniciar sesion</a></li>
               </ul>
             </div>
         </nav>
