--- a/estadisticas/estadisticas.html
+++ b/estadisticas/estadisticas.html
@@ -14,6 +14,13 @@
 		<script src="https://d3js.org/d3.v3.min.js"></script>
 	</head>
 	<body>
+		<div class="btn-group">
+			<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mi cuenta<span class="caret"></span></button> 
+			<ul class="dropdown-menu"> 
+				<li><a href="#">Registrar</a></li>
+			    <li><a href="#">Iniciar Sesion</a></li> 
+			</ul> 
+		</div>
 		<div class="navbar-wrapper">
 	      <div class="container" id="nav-container">
 
@@ -30,15 +37,13 @@
 	            <div id="navbar" class="navbar-collapse collapse">
 	              <ul class="nav nav-pills nav-justified">
 	                <li ><a href="../index.html">Principal</a></li>
+	                <li><a href="../foro/foro.html">Foros</a></li>
 	                <li><a href="../productos/productos.html">Productos</a></li>
 	                <li><a href="../torneosYtiendas/torneosYtiendas.html">Torneos y Tiendas</a></li>
 					<li><a href="../timeline/timeline.html">Evolución del Juego</a></li>
 					<li><a href="../comoSeJuega/comoSeJuega.html">Cómo se Juega</a></li>
-					<li><a href="">Foros</a></li>
 					<li class="active"><a href="#estadisticas">Estadísticas</a></li>
 					<li><a href="../contactenos/contactenos.html">Contáctenos</a></li>
-					<li><a href="">Registrar</a></li>
-				<li><a href="">Iniciar sesion</a></li>
 	              </ul>
 	            </div>
 	        </nav>
