--- a/estadisticas/estadisticas.html
+++ b/estadisticas/estadisticas.html
@@ -18,7 +18,7 @@
 			<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mi cuenta<span class="caret"></span></button> 
 			<ul class="dropdown-menu"> 
 				<li><a href="#">Registrar</a></li>
-			    <li><a href="#">Iniciar Sesion</a></li> 
+			    <li><a href="../login/login.html">Iniciar Sesion</a></li> 
 			</ul> 
 		</div>
 		<div class="navbar-wrapper">
